Fix header + firm save button + not centered in web view 2nd firm screen.

--- a/src/app/components/firm-information/firm-information.component.scss
+++ b/src/app/components/firm-information/firm-information.component.scss
@@ -13,8 +13,8 @@ $secondaryfont: "museo-sans";
     justify-content: center;
   }
   form{
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
   }
   .information-box {
     position: absolute;
@@ -402,7 +402,6 @@ select {
   font-stretch: normal;
   line-height: normal;
   letter-spacing: 0.9px;
-  color: #1598cb;
   text-transform: uppercase;
 }
 .btn-upload {
