--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -12,7 +12,6 @@ header {
     }
     
     .masthead {
-        width: 98%;
         margin: 0 auto;
     }
 }
@@ -76,10 +75,12 @@ header {
     }
     .right-section{
         display: flex;
+        padding-right:20px;
         align-items: center;
     }
     .left-section{
         flex: 1;
+        padding-left: 20px;
     }
 }
 
